test: UserService