@@ -14,31 +14,32 @@ public abstract class UserService {
 
 	protected abstract UserRepository getRepository();
 
-	public final User getBy(String username) {
+	public final User getByUsername(String username) {
 		return getRepository().getByUsername(username)
-				.orElseThrow(() -> new UsernameNotFoundException(String.format("Username [%s] not found!", username)));
+				.orElseThrow(() -> new UsernameNotFoundException(exceptionNotFound(username)));
+	}
+
+	private final String exceptionNotFound(String username) {
+		return "Username [%s] not found!".formatted(username);
 	}
 
 	public final List<User> getUsers(String usernameContains, String roleName) {
 		return getRepository().getAll(usernameContains, roleName);
 	}
 
-	public final void registerNew(User user) {
+	public final void register(User user) {
 		if(isPresent(user.getUsername()))
-			throw new EntityExistsException(String.format("Username [%s] is already taken!", user.getUsername()));
+			throw new EntityExistsException(exceptionDuplicated(user.getUsername()));
 		user = setNewEncodedPassword(user, user.getPassword());
-		getRepository().register(user);
-	}
-
-	//TODO check this: consults database twice before being this method is called
-	public final void update(User user) {
-		if(!isPresent(user.getUsername()))
-			throw new EntityNotFoundException(String.format("Username [%s] not found!", user.getUsername()));
 		getRepository().register(user);
 	}
 
 	private final boolean isPresent(String username) {
 		return getRepository().getByUsername(username).isPresent();
+	}
+
+	private final String exceptionDuplicated(String username) {
+		return "Username [%s] is already taken!".formatted(username);
 	}
 
 	private final User setNewEncodedPassword(User user, String password) {
@@ -47,13 +48,20 @@ public abstract class UserService {
 	}
 
 	//TODO check this: consults database twice before being this method is called
+	public final void update(User user) {
+		if(!isPresent(user.getUsername()))
+			throw new EntityNotFoundException(exceptionNotFound(user.getUsername()));
+		getRepository().register(user);
+	}
+
+	//TODO check this: consults database twice before being this method is called
 	public final void delete(String username) {
-		getRepository().delete(getBy(username));
+		getRepository().delete(getByUsername(username));
 	}
 
 	//TODO check this: consults database twice before being this method is called
 	public final void updatePassword(String username, String newPassword) {
-		User user = getBy(username);
+		User user = getByUsername(username);
 		user = setNewEncodedPassword(user, newPassword);
 		getRepository().register(user);
 	}
